Fixed Small IconMorphs in NavBar get clipped

--- a/src/main/resources/gwt/material/design/addins/client/iconmorph/resources/css/morph.css
+++ b/src/main/resources/gwt/material/design/addins/client/iconmorph/resources/css/morph.css
@@ -7,7 +7,7 @@
     position: relative;
     cursor: pointer;
 }
-.anim-container .icons {
+.anim-container .icons.material-icons {
     transition: .3s;
     -moz-transition: .3s;
     -webkit-transition: .3s;
@@ -17,6 +17,7 @@
     width: 1em;
     position: absolute;
     left: 0;
+    line-height: normal;
 }
 .anim-container .source {
     transform: rotate(-135deg);
